fixed alignment issues of the about section

--- a/client/landing/sections/about.css
+++ b/client/landing/sections/about.css
@@ -2,34 +2,37 @@
 
 .about-section {
   background-color: var(--color-purple-900);/* Deep purple background */
+  
+
 }
 
-.about-section__title--ekehi{font-style: italic;}
+.about-section__container{max-width: var(--container-max)}
 
+.about-section__container--title--ekehi{font-style: italic;}
 
 
 
 /* Responsive across mobile and desktop screens */
-@media (max-width: 768px) {
+@media (max-width: 760px) {
 
-  .about-section{
+  .about-section__container{
     flex-direction: column;
     gap: var(--space-10);
   }
 
-  .about-section__title{
+  .about-section__container--title{
     flex: none;
   }
 
-  .about-section__description{
+  .about-section__container--description{
     padding-inline: 0;
   }
 
 }
 
 
-@media (max-width: 400px) {
-  .about-section__title{
+@media (max-width: 780px) {
+  .about-section__container--title{
     font-size: var(--text-4xl);
   }
 }
